@@ -11,6 +11,7 @@ function fourCellsFromXY is now visible.
 method 'freq' implemented for 'RasterStackBrick'
 new function 'layerize'
 function 'reclassify' replaces identical 'reclass' (still available but with deprecation warning) to avoid hiding xts::reclass
+added arguments to writeRaster to allow for writing layers to individual files
 
 --- 27-June-2012, version 2.0-08
 bug fixes (both introduced in version 2.0-04):
